--- a/SportsSln/SportsStore/Views/_ViewImports.cshtml
+++ b/SportsSln/SportsStore/Views/_ViewImports.cshtml
@@ -1,5 +1,4 @@
 ﻿@using SportsStore.Models
 @using SportsStore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, SportsStore;
-
+@addTagHelper *, SportsStore
